# gesture-training

./: .gitignore  .gitmodules  Cargo.toml  org.fredericvauchelles.GestureTraining.yml
.github/: FUNDING.yml
docs/: index.html
gesture-training/: Cargo.toml  build.rs  manifest.yaml
gesture-training-app/: Cargo.toml
gesture-training-app/src/: app.rs  lib.rs  main.rs  prepare_session.rs  run_session.rs
gesture-training/src/: app.rs  app_data.rs  lib.rs
gesture-training/src/app/: android.rs  android_support.rs  app_callback.rs  app_impl.rs  app_ui.rs  backend.rs  log.rs  mod.rs  session.rs  source_folder.rs
gesture-training/src/app/backend/: mod.rs  modifications.rs  persistence.rs  session.rs
gesture-training/src/app/image_source/: backend.rs  folder.rs  mod.rs
gesture-training/src/app/image_source/folder/: app.rs  backend.rs  image_source.rs  mod.rs
gesture-training/src/app/session/: app.rs  backend.rs  mod.rs
gesture-training/test/: 1.json  slint-viewer-data.json
gesture-training/ui/: appwindow.slint
gesture-training/ui/pages/: appwindow.slint  common.slint  main-menu.slint  prepare-session.slint  session.slint
gesture-training/ui/widgets/: button.slint  dialog-add-folder.slint  dialog-edit-source-folder.slint  dialog.slint  edit-source-folder.slint  image-source-selector.slint  label.slint  radio-box.slint  status-icon.slint  styling.slint  timer.slint  widgets.slint
gesture-training/wix/: main.wxs
linux/: org.fredericvauchelles.GestureTraining.desktop
src/: app.rs  main.rs  prepare_session.rs  run_session.rs
src/prepare_session/: mod.rs  session_configuration.rs  session_preparation.rs
src/prototype/: mod.rs
