[package]
name = "gesture-training"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "gesture-training"
path = "src/lib.rs"

[dependencies]
slint = { version = "1.7.1", features = ["backend-android-activity-06"] }
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
log = "0.4.22"
rfd = "0.14.1"

[build-dependencies]
slint-build = "1.7.1"