[package]
name = "gesture-training"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "gesture-training"
path = "src/lib.rs"

[dependencies]
slint = { version = "1.7.1", features = ["backend-android-activity-06"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
log = "0.4.22"
async-std = "1.12.0"
rand = { version = "0.8.5", features = [] }
dirs = "5.0.1"
serde = { version = "1.0.206", features = ["derive"] }
serde_yaml = "0.9.33"

[build-dependencies]
slint-build = "1.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = "0.14.1"

[target.'cfg(target_os = "macos")'.dependencies]
rfd = "0.14.1"

[target.'cfg(target_os = "window")'.dependencies]
rfd = "0.14.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
